--- a/web/src/components/Toolbar/Toolbar.style.scss
+++ b/web/src/components/Toolbar/Toolbar.style.scss
@@ -1,10 +1,13 @@
 @import 'styles/Theme.style.scss';
 
 .Toolbar {
-  background: #E9D8A6;
-  overflow: hidden;
-  border: 1px;
-  box-shadow: 0px 2px 25px rgba($color: #000000, $alpha: 0.2);
+
+  .nav-container {
+    background: #E9D8A6;
+    overflow: hidden;
+    border: 1px;
+    box-shadow: 0px 2px 25px rgba($color: #000000, $alpha: 0.2);
+  }
 
   .col-left {
     float: left;
