Feat.: sweetalert2 modal

--- a/web/src/components/Toolbar/Toolbar.style.scss
+++ b/web/src/components/Toolbar/Toolbar.style.scss
@@ -68,4 +68,14 @@
       color: $dark-cyan;
     }
   }
+
+  .col-right {
+    margin-top: 50px;
+    margin-right: 50px;
+    font-size: 50px;
+    
+    svg {
+      cursor: pointer;
+    }
+  }
 }
