Save product images initial files

--- a/web/src/styles/Themes/_variables.scss
+++ b/web/src/styles/Themes/_variables.scss
@@ -1,4 +1,3 @@
-$white: #fff;
 $rich-black: #001219;
 $midnight-green: #005F73;
 $dark-cyan: #0A9396;
@@ -12,4 +11,6 @@ $auburn: #9B2226;
 $din-gray: #696969;
 $charcoal-gray: #333333;
 
+$white: #fff;
+$black: #000;
 $cream: #FFFDD0;
