--- a/web/src/pages/Products/components/ProductsCarousel/CarouselItem/CarouselItem.style.scss
+++ b/web/src/pages/Products/components/ProductsCarousel/CarouselItem/CarouselItem.style.scss
@@ -37,17 +37,28 @@
     margin-bottom: 30px;
     bottom: 0;
 
-    button {
-      width: 250px;
+    .see-more,
+    .add-to-cart {
       height: 50px;
-      background-color: $rust;
       color: $white;
       border: none;
       border-radius: 10px;
       cursor: pointer;
+    }
+
+    .see-more {
+      width: 170px;
+      background-color: $rust;
       font-size: 18px;
       font-weight: 600;
       letter-spacing: 1px;
+      margin-right: 15px;
+    }
+
+    .add-to-cart {
+      width: 60px;
+      background-color: $dark-cyan;
+      font-size: 20px;
     }
   }
 }
